# asrt

./: CMakeLists.txt  LICENSE  README.md  buildshell.sh
cmake/: toolchain_arm.cmake  toolchain_x64.cmake
examples/: CMakeLists.txt  multicast_sender.cpp  sender_receiver.cpp  udp_server.cpp
include/asrt/: asrt.hpp  callstack.hpp  common_incl.hpp  common_types.hpp  concepts.hpp  config.hpp  error_code.hpp  netbuffer.hpp  netbuffer_fwd.hpp  pch.hpp  ring_buffer_view.hpp  type_traits.hpp  user_format.hpp  util.hpp
include/asrt/client_server/: client_interface.hpp  common_types.hpp  connection.hpp  message.h  message_queue.hpp  server_interface.hpp
include/asrt/client_server/impl/: client_interface.ipp  server_interface.ipp
include/asrt/client_server/internal/: client_message_handler.hpp  server_message_handler.hpp
include/asrt/details/: registry.hpp  static_vector.hpp
include/asrt/execution/: concepts.hpp  execution.hpp
include/asrt/execution/details/: just.hpp  operation_state.hpp  receiver.hpp  receiver_wrapper.hpp  sender.hpp  then.hpp
include/asrt/execution/utilities/: config.hpp  utils.hpp
include/asrt/executor/: details.hpp  executable.hpp  executor_config.hpp  executor_generic.hpp  executor_interface.hpp  executor_task.hpp  executor_work_guard.hpp  io_executor.hpp  io_executor_fwd.hpp  safe_scoped_lock.hpp  strand.hpp  timed_task.hpp  types.hpp
include/asrt/executor/impl/: strand.ipp
include/asrt/impl/: asrt_impl.hpp  basic_signalset.ipp  basic_stream_socket.ipp  io_executor.ipp  src.hpp
include/asrt/ip/: tcp.hpp  udp.hpp
include/asrt/reactor/: epoll_reactor.hpp  epoll_reactor_fwd.hpp  io_uring_reactor.hpp  null_reactor.hpp  reactor_interface.hpp  reactor_proxy.hpp  types.hpp
include/asrt/signalset/: basic_signalset.hpp  signal_set_base.hpp
include/asrt/socket/: acceptor.hpp  address.hpp  address_types.hpp  address_v4.hpp  address_v6.hpp  async_operation.hpp  basic_datagram_socket.hpp  basic_endpoint.hpp  basic_packet_socket.hpp  basic_socket.hpp  basic_stream_socket.hpp  datagram_socket.hpp  internet_endpoint.hpp  packet_endpoint.hpp  protocol.hpp  protocol_fwd.hpp  socket_base.hpp  socket_option.hpp  stream_socket_fwd.hpp  types.hpp  unix_domain_endpoint.hpp  unix_socket.hpp
include/asrt/socket/impl/: acceptor_socket.ipp  packet_socket.ipp  stream_socket.ipp
include/asrt/sys/: epoll_wrapper.hpp  io_uring_wrapper.hpp  syscall.hpp
include/asrt/thread_pool/: static_thread_pool.hpp
include/asrt/timer/: basic_timer.hpp  basic_waitable_timer.hpp  null_timer.hpp  steady_timer.hpp  timer_queue.hpp  timer_types.hpp  timer_util.hpp
include/asrt/unix/: packet.hpp  unix_domain.hpp
lib/: expected.hpp  ipaddr.h  optional.hpp
lib/small/: string.hpp
lib/small/detail/container/: lookup_table_view.hpp
lib/std23/: __functional_base.h  function.h  function_ref.h  move_only_function.h
src/: asrt.cpp
